--- a/HyperCapsLoki.xcodeproj/xcshareddata/xcschemes/HyperCapsLoki.xcscheme
+++ b/HyperCapsLoki.xcodeproj/xcshareddata/xcschemes/HyperCapsLoki.xcscheme
@@ -66,7 +66,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-ResetAppState"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
