--- a/HyperCapsLoki.xcodeproj/xcshareddata/xcschemes/HyperCapsLoki.xcscheme
+++ b/HyperCapsLoki.xcodeproj/xcshareddata/xcschemes/HyperCapsLoki.xcscheme
@@ -30,6 +30,62 @@
             <AutocreatedTestPlanReference>
             </AutocreatedTestPlanReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "AppLogger"
+               BuildableName = "AppLogger"
+               BlueprintName = "AppLogger"
+               ReferencedContainer = "container:AppLogger">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "HyperCapsLokiModule"
+               BuildableName = "HyperCapsLokiModule"
+               BlueprintName = "HyperCapsLokiModule"
+               ReferencedContainer = "container:HyperCapsLokiModule">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "HyperCapsLokiUI"
+               BuildableName = "HyperCapsLokiUI"
+               BlueprintName = "HyperCapsLokiUI"
+               ReferencedContainer = "container:HyperCapsLokiUI">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "SharedAssets"
+               BuildableName = "SharedAssets"
+               BlueprintName = "SharedAssets"
+               ReferencedContainer = "container:SharedAssets">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -78,6 +134,13 @@
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "ENABLE_APP_LOGGER"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
