--- a/HyperCapsLoki.xcodeproj/xcshareddata/xcschemes/HyperCapsLoki.xcscheme
+++ b/HyperCapsLoki.xcodeproj/xcshareddata/xcschemes/HyperCapsLoki.xcscheme
@@ -131,7 +131,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-ResetAppState"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
