--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        
+      - name: List available Xcode versions
+        run: ls /Applications | grep Xcode || echo "No Xcode installations found"
 
+      - name: Select Xcode 16.4
+        run: sudo xcode-select -s /Applications/Xcode_15.4.app
+        
       - name: Set up keychain and import signing certificate
         run: |
           echo "$CERT_P12" | base64 --decode > certificate.p12
@@ -33,10 +39,19 @@ jobs:
           echo "$NOTARY_API_KEY_CONTENT" > ~/.private_keys/AuthKey.p8
         env:
           NOTARY_API_KEY_CONTENT: ${{ secrets.NOTARY_API_KEY_CONTENT }}
+          
+      - name: Create SignedRelease.xcconfig dynamically
+        run: |
+          mkdir -p Configs
+          cat > Configs/SignedRelease.xcconfig <<EOF
+          CODE_SIGN_STYLE = Manual
+          CODE_SIGN_IDENTITY = Developer ID Application
+          DEVELOPMENT_TEAM = ${{ secrets.APPLE_TEAM_ID }}
+          EOF
 
       - name: Build app with Xcode
         run: |
-          xcodebuild -scheme HyperCapsLoki -configuration Release -derivedDataPath build \
+          xcodebuild -scheme HyperCapsLoki -configuration SignedRelease -derivedDataPath build \
             -archivePath build/HyperCapsLoki.xcarchive archive \
             -xcconfig Configs/SignedRelease.xcconfig \
             CODE_SIGN_IDENTITY="Developer ID Application" \
